<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DrawingFragment">

    <com.example.first_mgr.DrawingView
        android:id="@+id/drawing_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@android:color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/btn_clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Wyczyść"
            android:backgroundTint="@color/teal_500"
            />

        <Button
            android:id="@+id/btn_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Zapisz"
            android:backgroundTint="@color/olive"/>

        <Button
            android:id="@+id/btn_saved"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Zapisane"
            android:backgroundTint="@color/olive"/>

        <Button
            android:id="@+id/btn_change_background"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Układ"
            android:backgroundTint="@color/teal_500"/>
    </LinearLayout>
</LinearLayout>
